# til24-nlcheese

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postCreate.sh  setupGCS.sh
eval/: test_nlp.py
til24_nlp/: NLPManager.py  app.py  cheese.py  structs.py
